--- a/css/nav.css
+++ b/css/nav.css
@@ -2,6 +2,11 @@ body {
     background:#eee;
 }
 
+.site-tips {
+    background:white;
+    border-left: 5px solid  #009688;
+}
+
 .nav {
     background: #393D49;
     position:fixed;
